# ghidractl

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: lint.yml  publish.yml  test.yml
src/ghidractl/: __init__.py  __main__.py  config.py  errors.py  platform.py
src/ghidractl/cli/: __init__.py  app.py  formatters.py  smart_group.py
src/ghidractl/cli/commands/: config_cmd.py  extensions.py  install.py  java_cmd.py  list_cmd.py  locate.py  run.py  settings.py  uninstall.py  update.py  use.py
src/ghidractl/ghidra/: __init__.py  extensions.py  installer.py  launcher.py  registry.py  releases.py  settings.py  version_map.py
src/ghidractl/java/: __init__.py  adoptium.py  detector.py  installer.py  validator.py
src/ghidractl/net/: __init__.py  client.py  download.py  github.py
tests/: conftest.py
tests/fixtures/: adoptium_available.json  releases_response.json
tests/unit/: test_adoptium.py  test_config.py  test_detector.py  test_installer.py  test_platform.py  test_registry.py  test_releases.py  test_smart_group.py  test_version_map.py
