[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghidractl"
dynamic = ["version"]
description = "Ghidra installation manager and Python library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Baier" },
]
keywords = ["ghidra", "reverse-engineering", "security", "nsa", "binary-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "httpx>=0.27",
    "typer[all]>=0.12",
    "rich>=13.0",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version<'3.11'",
    "tomli-w>=1.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
ghidractl = "ghidractl.cli.app:app"

[project.urls]
Homepage = "https://github.com/monkeywave/ghidractl"
Repository = "https://github.com/monkeywave/ghidractl"
Issues = "https://github.com/monkeywave/ghidractl/issues"

[tool.hatch.version]
path = "src/ghidractl/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ghidractl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
